<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bignerdranch.android.locationtracker.NewTrackActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:text="@string/new_track_title"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textAlignment="center"/>

    <LinearLayout
    android:layout_marginTop="40dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:text="@string/new_track_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/new_track_name_hint"/>


    <TextView
        android:text="@string/new_track_description"
        android:labelFor="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/new_track_description_hint"/>

</LinearLayout>

    <Button
        android:id="@+id/new_track_button"
        android:text="@string/new_track_start_button"
        android:onClick="onStartButton"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"/>



</RelativeLayout>
