<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bignerdranch.android.locationtracker.MyTracks">

    <TextView
        android:id="@+id/textViewTitle"
        style="@style/title"/>

    <Button
        android:id="@+id/buttonAddLocation"
        android:text="@string/add_location_button"
        android:onClick="onAddLocation"
        style="@style/button"
        android:layout_below="@id/textViewTitle"
        android:layout_alignParentBottom="false"/>



    <ListView
        android:id="@+id/mytracks_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_above="@+id/new_track_button"
        android:layout_below="@+id/settings_button"
        android:layout_marginBottom="15dp"
        ></ListView>

    <TextView
        android:id="@+id/textViewEmptyList"
        android:text="@string/my_tracks_empty_list_notification"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/new_track_button"
        android:onClick="onDoneButton"
        android:text="@string/done_button"
        style="@style/button"/>

</RelativeLayout>

