<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bignerdranch.android.locationtracker.MyTracks">

        <TextView
            android:id="@+id/textViewTitle"
            android:text="@string/my_tracks_title"
            style="@style/title"/>

        <ImageButton
            android:id="@+id/settings_button"
            android:src="@drawable/settings"
            android:onClick="click_on_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"/>

        <ListView
            android:id="@+id/mytracks_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/new_track_button"
            android:layout_below="@+id/settings_button"
            android:layout_marginBottom="15dp"
            />

        <TextView
            android:id="@+id/textViewEmptyList"
            android:text="@string/my_tracks_empty_list_notification"
            android:textAlignment="center"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/new_track_button"
            android:onClick="click_on_new_track_button"
            android:text="@string/new_track_button"
            style="@style/button"/>

</RelativeLayout>
